get service provider payment history
